<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Security Watch</string>
    <string name="app_description">Shows installed applications which MAY read confidential information from your device
        and send information to the Internet.
    </string>

    <string name="permissions_activity_label">Permissions and Apps</string>

    <string name="dialog_loading_title">Loading permissions</string>
    <string name="dialog_loading_description">Please wait...</string>

    <string name="menu_refresh">Refresh</string>
    <!--<string name="menu_help">Help</string>-->
    <string name="menu_preferences">Preferences</string>

    <string name="preferences_activity_label">Preferences</string>

    <!--<string name="preferences_analyze_packages_title">Show Packages</string>-->
    <!--<string name="preferences_analyze_packages_summaryOn">Applications and Packages will be analyzed</string>-->
    <!--<string name="preferences_analyze_packages_summaryOff">Only Applications will be analyzed</string>-->

    <string name="preferences_include_system_title">Include System Apps</string>
    <string name="preferences_include_system_summaryOn">System Applications will be analyzed</string>
    <string name="preferences_include_system_summaryOff">Only Non-System Applications will be analyzed</string>

    <string name="preferences_internet_only_title">Internet Apps Only</string>
    <string name="preferences_internet_only_summaryOn">Show Applications that REQUIRE Internet access.</string>
    <string name="preferences_internet_only_summaryOff">Show Applications that DOES NOT REQUIRE Internet
        access.
    </string>

    <string name="preferences_show_safe_permissions_title">Show "safe" permissions</string>
    <string name="preferences_show_safe_permissions_summaryOn">Show all permissions, including "safe" ones</string>
    <string name="preferences_show_safe_permissions_summaryOff">Show only sufficient permissions, exclude "safe" ones
    </string>
</resources>
